modify article tags

--- a/source/_posts/网易秋招-跳石板.md
+++ b/source/_posts/网易秋招-跳石板.md
@@ -2,7 +2,7 @@
 title: 网易秋招-跳石板
 date: 2016-12-27 15:06:22
 categories: 算法
-tags: [Dynamic Programme, C++]
+tags: [Dynamic Programme, Netease]
 ---
 网易2017年秋季校招编程题，在[牛客网](https://www.nowcoder.com/)上刷题通过，下面记录相关思路。
 
